lintian (1.23.20) unstable; urgency=low

  * checks/fields:
    + [RA] xfonts-encodings is also not an xfont package.  Thanks, Drew
      Parsons.  (Closes: #365503)

 -- Russ Allbery <rra@debian.org>  Sun, 30 Apr 2006 13:00:00 -0700

lintian (1.23.19) unstable; urgency=low

  The "Policy 3.7.0" release

  * checks/fields{.desc,}:
    + [RA] python-all-dev also satisfies dh_python's requirements.
      Thanks, Marc Dequènes (Duck).  (Closes: #364943)
    + [RA] Allow python in Build-Depends if it's invoked explicitly in the
      clean rule.  Thanks, Marc Dequènes (Duck).  (Closes: #365030)
    + [RA] Recognize the CDBS included rule files that indicate dpatch or
      quilt will be used, check those dependencies, and require that they
      be in Build-Depends since they're used for clean.  Thanks, Marc
      Dequènes (Duck).  (Closes: #365041)
  * checks/files{.desc,}:
    + [RA] Add the references to Policy for the deprecation of X11R6
      directories now that Policy has been updated in 3.7.0.0.
    + [RA] Policy now mandates FHS 2.3.  Update tag descriptions.
    + [RA] Warn about files installed in /usr/lib/cgi-bin.  Policy now
      states they should be installed in /usr/lib/cgi-lib.
    + [RA] Warn about scripts installed on the user's PATH with names that
      include language extensions (.sh, .pl, .py), per Policy 10.4.
    + [RA] Report directories under /usr/share/man that don't match the
      directory layout specified in the FHS.  (Closes: #176683)
    + [RA] Fix a very long-standing bug that caused the check for
      executable manpages to be silently skipped.
  * checks/scripts:
    + [RA] Debian etch release policy explicitly forbids scripts without
      #! magic and they rely on being run from a shell.  Revert the change
      that permitted the Perl magic without a #! line.  Thanks to Piotr
      Engelking and Steve Langasek for pointing this out.
    + [RA] Don't syntax-check *.dpatch scripts in /usr/src.  bash -n