@@ -25,9 +25,13 @@ W: scripts: binary-without-manpage suidperlfoo
 W: scripts: binary-without-manpage suidperlfoo2
 W: scripts: binary-without-manpage test.sh
 W: scripts: binary-without-manpage tkfoo
+W: scripts: executable-is-not-world-readable usr/bin/perl-bizarre-2 0750 != 0755
+W: scripts: executable-is-not-world-readable usr/bin/suidperlfoo2 4751
 W: scripts: executable-not-elf-or-script ./usr/bin/perl-bizarre-3
 W: scripts: file-in-usr-lib-cgi-bin usr/lib/cgi-bin/cgi-script
+W: scripts: non-standard-executable-perm usr/bin/perl-bizarre-3 0754 != 0755
+W: scripts: non-standard-setuid-executable-perm usr/bin/suidperlfoo 4555
 W: scripts: package-installs-python-pyc usr/lib/python2.3/site-packages/test.pyc
 W: scripts: script-with-language-extension usr/bin/test.sh
-W: scripts: setuid-binary usr/bin/suidperlfoo 4755 root/root
-W: scripts: setuid-binary usr/bin/suidperlfoo2 4755 root/root
+W: scripts: setuid-binary usr/bin/suidperlfoo 4555 root/root
+W: scripts: setuid-binary usr/bin/suidperlfoo2 4751 root/root
